Add configuration variable aof-write-buffer-max-size.

--- a/redis.conf
+++ b/redis.conf
@@ -312,6 +312,28 @@ no-appendfsync-on-rewrite no
 auto-aof-rewrite-percentage 100
 auto-aof-rewrite-min-size 64mb
 
+# Max size of the AOF write buffer.
+#
+# Redis buffers all writes to the AOF in memory. A write thread then saves the
+# buffer to disk in the background. While the old buffer is being saved to
+# disk, the main thread starts to fill a new buffer with data. If the current
+# buffer ever gets larger than the configured size, then the main thread will
+# block until the write thread takes care of the buffer. This only happens if
+# the write thread can't keep up with the main thread.
+#
+# The actual memory usage can be twice that of the buffer size, because when
+# the write thread starts to write one buffer to disk the main thread starts to
+# fill a new buffer (so there will be two buffers). Note that the max buffer
+# size is only approximate. If the buffer is filled, it will probably get
+# larger than the configured size.
+#
+# Whenever the main thread blocks due to a full write buffer a message is
+# logged. A too small buffer is not good for performance.
+#
+# The special value 0 means unlimited (not recommended).
+
+aof-write-buffer-max-size 50M
+
 #################################### DISK STORE ###############################
 
 # When disk store is active Redis works as an on-disk database, where memory
