Make waiting on AOF writes configurable.

--- a/redis.conf
+++ b/redis.conf
@@ -272,6 +272,55 @@ appendonly no
 appendfsync everysec
 # appendfsync no
 
+# Wait for AOF writes before replying to the client.
+#
+# A write doesn't necessarily involve an fsync. That depends on 'appendfsync'
+# above. It is possible to specify different behaviour for read-only operations
+# and write operations (all operations that need to be logged). That's why
+# there are two configuration variables.
+#
+# To improve performance you probably want to set aof-wait-reads to no, but if
+# it is important that read values are guaranteed to have been committed to
+# disk before returned, you need to configure this to yes. With aof-wait-reads
+# set to no a read operation may return data that has not yet been logged to
+# disk.
+#
+# For maximum durability you'll want appendfsync always combined with
+# aof-wait-writes yes. This will guarantee that writes are written to disk
+# before they return. With aof-wait-reads no you can still do reads quickly in
+# parallel. Also note that the throughput, with these settings, improve
+# drastically as you increase the number of concurrent clients (thanks to
+# fsyncing several operations at a time).
+#
+# Great performance can be achieved by setting appendfsync to everysec and both
+# these settings to no. You will get the data to the disk rather quickly and
+# can loose approximately one second plus two times aof-write-buffer-max-size
+# of data in a worst case scenario. These settings are recommended for good
+# performance.
+aof-wait-writes no
+aof-wait-reads no
+
+# Max size of the AOF write buffer.
+#
+# Redis buffers all writes to the AOF in memory. A write thread then saves the
+# buffer to disk in the background. While the old buffer is being saved to
+# disk, the main thread starts to fill a new buffer with data. If the current
+# buffer ever gets larger than the configured size, then the main thread will
+# block until the write thread takes care of the buffer. This only happens if
+# the write thread can't keep up with the main thread.
+#
+# The actual memory usage can be twice that of the buffer size, because when
+# the write thread starts to write one buffer to disk the main thread starts to
+# fill a new buffer (so there will be two buffers). Note that the max buffer
+# size is only approximate. If the buffer is filled, it will probably get
+# larger than the configured size.
+#
+# Whenever the main thread blocks due to a full write buffer a message is
+# logged. A too small buffer is not good for performance.
+#
+# The special value 0 means unlimited (not recommended).
+aof-write-buffer-max-size 50M
+
 # When the AOF fsync policy is set to always or everysec, and a background
 # saving process (a background save or AOF log background rewriting) is
 # performing a lot of I/O against the disk, in some Linux configurations
@@ -311,28 +360,6 @@ no-appendfsync-on-rewrite no
 
 auto-aof-rewrite-percentage 100
 auto-aof-rewrite-min-size 64mb
-
-# Max size of the AOF write buffer.
-#
-# Redis buffers all writes to the AOF in memory. A write thread then saves the
-# buffer to disk in the background. While the old buffer is being saved to
-# disk, the main thread starts to fill a new buffer with data. If the current
-# buffer ever gets larger than the configured size, then the main thread will
-# block until the write thread takes care of the buffer. This only happens if
-# the write thread can't keep up with the main thread.
-#
-# The actual memory usage can be twice that of the buffer size, because when
-# the write thread starts to write one buffer to disk the main thread starts to
-# fill a new buffer (so there will be two buffers). Note that the max buffer
-# size is only approximate. If the buffer is filled, it will probably get
-# larger than the configured size.
-#
-# Whenever the main thread blocks due to a full write buffer a message is
-# logged. A too small buffer is not good for performance.
-#
-# The special value 0 means unlimited (not recommended).
-
-aof-write-buffer-max-size 50M
 
 #################################### DISK STORE ###############################
 
